--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-modal": "^1.4.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-slick": "^0.14.5",
     "redux": "^3.6.0",
     "webpack": "^1.13.2"
   },
